syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ToyDb.Messages";

enum DataType {
  Null = 0;
  Bool = 1;
  Int = 2;
  Long = 3;
  Float = 4;
  Double = 5;
  String = 6;
}

message KeyValueRequest {
	google.protobuf.Timestamp timestamp = 1;
	DataType type = 2;
	string key = 3;
	google.protobuf.BytesValue value = 4;
}

message KeyValueResponse {
	google.protobuf.Timestamp timestamp = 1;
	DataType type = 2;
	string key = 3;
	google.protobuf.BytesValue value = 4;
}

service Data {
	rpc GetValue (GetRequest) returns (KeyValueResponse);
	rpc GetAllValues (GetAllValuesRequest) returns (GetAllValuesReresponse);
	rpc SetValue (KeyValueRequest) returns (KeyValueResponse);
	rpc DeleteValue (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
	string key = 1;
}

message GetAllValuesRequest {
}

message GetAllValuesReresponse {
	repeated KeyValueResponse values = 1;
}

message DeleteRequest { 
	google.protobuf.Timestamp timestamp = 1;
	string key = 2;
}

message DeleteResponse {
}